tests/Routing/Mapping/Files/Classes/Valid/Attribute/NoRoutesRoute.php
<?php

/*
 * (c) 2017-2025 Julián Gutiérrez <juliangut@gmail.com>
 *
 * @license BSD-3-Clause
 * @link https://github.com/juliangut/slim-routing
 */

declare(strict_types=1);

namespace Jgut\Slim\Routing\Tests\Mapping\Files\Classes\Valid\Attribute;

/**
 * Example no routes route.
 */
class NoRoutesRoute {}
